# equity-valuation-dcf-model

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: examples.md  methodology.md  model_layout.md
models/examples/: sample_valuation_nvda.xlsx
notebooks/: 03_dcf_and_comps_walkthrough.ipynb
scripts/: make_docs.py
src/valuation_studio/: __init__.py  cli.py  comps.py  dcf.py  excel_bridge.py  loaders.py  reporting.py  scenarios.py  statements.py
tests/: test_cli.py  test_comps.py  test_dcf.py  test_statements.py
