[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "valuation-studio"
version = "1.0.0"
description = "Institutional 3-Statement & DCF Modeling Engine with Excel Synchronization"
readme = "README.md"
authors = [
    { name = "An Vo", email = "an.vo@uni-bonn.de" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
    "typer>=0.9.0",
    "rich>=13.4.0",
    "yfinance>=0.2.28",
    "jinja2>=3.1.2",
    "pydantic>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-openpyxl>=3.1.0"
]

[project.scripts]
valstudio = "valuation_studio.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
extend-select = ["E501"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Option"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "valuation_studio.cli"
warn_unused_ignores = false

# Add this new block to handle untyped external data libraries
[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "yfinance.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/valuation_studio --cov-report=term-missing"
